# platform.core.security.cert-svc

./: CMakeLists.txt  cert-svc-test.manifest  cert-svc-vcore.pc.in  cert-svc.manifest  cert-svc.pc.in  cscope.files  cscope.out  make_cert.sh  project.config  tags
etc/: CMakeLists.txt  cert_svc_create_clean_db.sh  cert_svc_create_clean_store_db.sh  cert_svc_store_db.sql  initialize_store_db.sh  make-ca-certificate.sh
etc/certificates/: CMakeLists.txt
srcs/: CMakeLists.txt  cert-service-process.c  cert-service-store.c  cert-service-util.c  cert-service.c  dpkg-pki-sig.c
tests/: CMakeLists.txt
tests/capi/: CMakeLists.txt  api_tests.cpp  api_tests.h  common-res.cpp  common-res.h  crl_cache.h  main.cpp  test-certificate.cpp  test-primitive.cpp  test_cases.cpp  test_suite_01.cpp  test_suite_02.cpp
tests/capi/data/: cert1.der  cert3fake.der  root_ca_cert.pem  second_ca_cert.pem
tests/cert-svc/: CMakeLists.txt  Makefile  delete_test.c  extract_test.c  extract_test_pfx.c  mem_test.c  search_test.c  store_test.c  test-certificate-parsing.cpp  test_caflag.c  test_ocsp.c  test_suite.h  test_suite_main.c  verify_sig.c  verify_test.c
tests/cert-svc/data/: Broot.der  Broot.pem  cert2fake.pem  newcert.pem  notcert.der  rootcert.pem
tests/cert-svc/data/TestData/: B1.der  B2.der  B3.der  B4.der  B5.der  B6.der  B7.der  B8.der  B9.der  cert_sign.der  decodedCert.data  invalid_message  invalid_pubkey  invalid_signature  message  plaintext  priv.pem  pub_cert.der  pub_cert.pem  pubkey  root2.der  root3.der  signature
tests/cert-svc/data/caflag/: aia_signer.der  noaia_signer.der  ocsp_signer.crt  out.pem  root_ca.der  root_ca_v1.der  second_ca.der  v1_signer.der
tests/cert-svc/data/cert_chain/: 01.pem  02.pem  03.pem  ca.crt  chain5.crt
tests/cert-svc/data/ocsp/: cert-svc-tests-kill-ocsp-server.sh  cert-svc-tests-start-ocsp-server.sh  ocsp_signer.key  rev_signer.der
tests/cert-svc/data/pfx/: pfxtest.crt  pfxtest.key  pfxtest.pfx
tests/cert-svc/data/signing/: chain1.crt  chain1pub.pem  msg.sig  msg.sig.enc
tests/dpl/include/dpl/: abstract_input.h  abstract_input_output.h  abstract_output.h  assert.h  binary_queue.h  colors.h  errno_string.h  exception.h  foreach.h  free_deleter.h  lexical_cast.h  noncopyable.h  scoped_fclose.h  scoped_free.h  scoped_resource.h  singleton.h  singleton_impl.h
tests/dpl/src/: assert.cpp  binary_queue.cpp  errno_string.cpp  exception.cpp  singleton.cpp  test_results_collector.cpp  test_runner.cpp  test_runner_child.cpp  test_runner_multiprocess.cpp  value_separated_policies.cpp  value_separated_tokens.cpp
tests/pkcs12/: 8956b9bc.0  CMakeLists.txt  Invalidcrt.crt  Maha.pfx  aux_test.cpp  eastest036.pfx  filip.pkcs12  new_test_cases.cpp  pkcs12_test.cpp  test-common.cpp  test-common.h  test.p12  test_cases.cpp  tizen_test_certs.p12  with_pass.p12  without_pass.p12
tests/plugin/: CMakeLists.txt  plugin-sample.cpp
tests/vcore/: CMakeLists.txt  TestCRL.cpp  TestCRL.h  TestCases.cpp  TestEnv.cpp  TestEnv.h  cert-svc-tests-vcore-ocsp-server.sh  file_input_mapping.cpp  file_input_mapping.h  main.cpp  test-certificate.cpp  test-common.cpp  test-common.h  test-ocsp-check.cpp  test-signature-validator.cpp  test-time-conversion.cpp  vcore_tests.cpp
tests/vcore/certificate-generator/: .gitignore
tests/vcore/resource/: normal-tpk.tpk  root_cacert0.pem
tests/vcore/resource/attacked-tpk/: author-signature.xml  signature1.xml
tests/vcore/resource/attacked-tpk-with-userdata/: malfile  tizen-manifest.xml
tests/vcore/resource/tpk/: tizen-manifest.xml
tests/vcore/resource/wgt/: config.xml
tests/vcore/resource/wgt_negative_hash/: author-signature.xml  signature1.xml
tests/vcore/resource/wgt_negative_link/: author-signature.xml  config.xml  link  outboundLink  signature1.xml
tests/vcore/resource/wgt_negative_signature/: signature1.xml
tests/vcore/resource/wgt_partner/: signature1.xml
tests/vcore/resource/wgt_positive_link/: author-signature.xml  signature1.xml
vcore/: CMakeLists.txt  cert_svc_vcore_db.sql
vcore/cert-svc/: ccert.h  cerror.h  cinstance.h  cpkcs12.h  cprimitives.h  cstring.h
vcore/orig/: cert-service-debug.h  cert-service-process.c  cert-service-process.h  cert-service-store.c  cert-service-util.c  cert-service-util.h  cert-service.c  cert-service.h
vcore/server/include/: cert-server-db.h  cert-server-debug.h  cert-server-logic.h
vcore/server/src/: cert-server-db.c  cert-server-logic.c  cert-server-main.c
vcore/src/: CMakeLists.txt
vcore/src/cert-svc/: ccert.h  ccrl.h  cerror.h  cinstance.h  cocsp.h  cpkcs12.h  cprimitives.h  cstring.h
vcore/src/orm/: vcore_db
vcore/src/vcore/: Base64.cpp  Base64.h  CRL.cpp  CRL.h  CRLCacheDAO.cpp  CRLCacheDAO.h  CRLCacheInterface.h  CRLImpl.cpp  CRLImpl.h  CachedCRL.cpp  CachedCRL.h  CachedOCSP.cpp  CachedOCSP.h  CertStoreType.cpp  CertStoreType.h  Certificate.cpp  Certificate.h  CertificateCacheDAO.cpp  CertificateCacheDAO.h  CertificateCollection.cpp  CertificateCollection.h  CertificateConfigReader.cpp  CertificateConfigReader.h  CertificateIdentifier.h  CertificateLoader.cpp  CertificateLoader.h  CertificateVerifier.cpp  CertificateVerifier.h  Config.cpp  Config.h  CryptoHash.cpp  CryptoHash.h  Database.cpp  Database.h  DeveloperModeValidator.cpp  DeveloperModeValidator.h  IAbstractResponseCache.h  OCSP.cpp  OCSP.h  OCSPCertMgrUtil.cpp  (+44 more)
vcore/vcore/: Base64.cpp  Base64.h  CertStoreType.cpp  CertStoreType.h  Certificate.cpp  Certificate.h  CertificateCollection.cpp  CertificateCollection.h  CertificateConfigReader.cpp  CertificateConfigReader.h  CertificateIdentifier.h  CertificateLoader.cpp  CertificateLoader.h  Client.cpp  Client.h  CryptoInit.cpp  CryptoInit.h  Error.h  Ocsp.cpp  Ocsp.h  ParserSchema.h  PluginHandler.cpp  PluginHandler.h  ReferenceValidator.cpp  ReferenceValidator.h  SaxReader.cpp  SaxReader.h  SignatureData.cpp  SignatureData.h  SignatureFinder.cpp  SignatureFinder.h  SignatureReader.cpp  SignatureReader.h  SignatureValidator.cpp  SignatureValidator.h  TimeConversion.cpp  TimeConversion.h  ValidatorCommon.h  ValidatorFactories.cpp  ValidatorFactories.h  (+15 more)
(+324 files in other folders)
